--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mdi/js": "^5.9.55",
+    "@mdi/react": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^4.6.0",
     "lodash": "^4.17.21",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dnd": "^14.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
