Add publish scripts + fix sizing

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gin-rummy",
   "version": "0.1.0",
+  "homepage": "http://wutang13.github.io/gin-rummy",
   "private": true,
   "dependencies": {
     "@mdi/js": "^5.9.55",
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.168",
-    "@types/react": "^17.0.3"
+    "@types/react": "^17.0.3",
+    "gh-pages": "^3.1.0"
   }
 }
