--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "geneticalgorithm": "^1.0.2",
     "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
@@ -25,7 +26,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "build-coefficients": "tsc -p ./research && node research/determine_coefficients.js"
   },
   "eslintConfig": {
     "extends": [
